--- a/app/src/main/res/layout/activity_reverse.xml
+++ b/app/src/main/res/layout/activity_reverse.xml
@@ -9,11 +9,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text" />
+
     <TextView
         android:id="@+id/textView"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:text=""/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="" />
 
     <CheckBox
         android:id="@+id/reverse_checkbox"
