--- a/app/src/main/res/layout/activity_reverse.xml
+++ b/app/src/main/res/layout/activity_reverse.xml
@@ -11,7 +11,7 @@
         android:inputType="text" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/result_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
