--- a/app/src/main/res/layout/activity_reverse.xml
+++ b/app/src/main/res/layout/activity_reverse.xml
@@ -8,20 +8,30 @@
         android:id="@+id/editTexts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text" />
+        android:inputType="text"
+        />
 
     <TextView
         android:id="@+id/result_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:textColor="#F00"
         android:text="" />
 
     <CheckBox
         android:id="@+id/reverse_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/reverse" />
+        android:text="@string/reverse"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/text_explanation"
+        android:textColor="#000000"/>
     <Button
         android:layout_marginLeft="10pt"
         android:id="@+id/Ok"
