--- a/app/src/main/res/layout/activity_reverse.xml
+++ b/app/src/main/res/layout/activity_reverse.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:textColor="#F00"
-        android:hint="result here"
+        android:hint="result here and save resul here"
         android:text="" />
     <Button
         android:layout_width="wrap_content"
@@ -31,7 +31,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/uppercase" />
-
+<CheckBox
+    android:id="@+id/lowercase_checkbox"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/lowercase"/>
     <CheckBox
         android:id="@+id/reverse_checkbox"
         android:layout_width="wrap_content"
