change CheckBox to RadioButton

--- a/app/src/main/res/layout/activity_reverse.xml
+++ b/app/src/main/res/layout/activity_reverse.xml
@@ -26,16 +26,22 @@
         android:layout_marginLeft="10dp"
         android:id="@+id/Clear_button"
         android:text="@string/Clear"/>
-    <CheckBox
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <RadioButton
         android:id="@+id/uppercase_checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/uppercase" />
-<CheckBox
-    android:id="@+id/lowercase_checkbox"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/lowercase"/>
+        <RadioButton
+            android:id="@+id/lowercase_checkbox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/lowercase"/>
+    </RadioGroup>
+
+
     <CheckBox
         android:id="@+id/reverse_checkbox"
         android:layout_width="wrap_content"
